--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,8 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Im Bored</title>
-  <link rel="stylesheet" href="/public/styles/styles.css">
+  <link rel="stylesheet" href="/styles/styles.css">
 </head>
 <body>
     <h1 class="texty">sus</h1>
 </body>
+</html>
