--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,22 +1,119 @@
 @keyframes gradient-animation {
-    0% {
-      background-position: 0% 50%;
-    }
-    50% {
-      background-position: 100% 50%;
-    }
-    100% {
-      background-position: 0% 50%;
-    }
+  0% {
+    background-position: 0% 50%;
   }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+body{
+  margin:0px;
+ 
+}
+h1{
+  font-family: "Bebas Neue", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 4rem;
+  color:#ffffff;
+}
+h2{
+  font-family: 'PT Serif', serif;
+  font-weight: 400;
+  font-style:normal;
+  font-size: 2rem;
+  color:#ffffff;
+}
+
 .gradient-background {
     background: linear-gradient(300deg, #6527BE, #9681EB, #45CFDD, #A7EDE7);
     background-size: 180% 180%;
     animation: gradient-animation 18s ease infinite;
     width: 100vw;
 }
-h1{
-  color: #6527BE;
-    /* color: linear-gradient(300deg, #6527BE, #9681EB, #45CFDD, #A7EDE7);
-    animation: gradient-animation 18s ease infinite; */
+.header{
+  display: flex;
+  justify-content: flex-start;
+}
+.navbar{
+  background-color: #000000;
+
+}
+.container{
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+.headerItem {
+  color: #ffffff; 
+  font-weight: bold;
+  text-decoration: none;
+  
+  display: block;
+  padding: 20px 20px;
+  position: relative;
+  font-size: 1.5rem;
+  font-family: "Bebas Neue", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.bebas-neue-regular {
+  font-family: "Bebas Neue", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.container{
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  
+}
+
+.footer{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  margin-top: 5%;
+  padding-bottom: 5%;
+  padding-bottom: 5%;
+  background-color:#1a2c32;
+}
+.footer-link{
+  font-family: "Bebas Neue", sans-serif;
+  margin: 10px 20px;
+  text-decoration: none;
+  color:#ffffff;
+}
+.footer-links{
+  display: flex;
+  justify-content: center;
+  
+  
+}
+.copyright {
+  color: #eaf6f6;
+  font-size: 0.75rem;
+  padding: 20px 0;
+}
+.btn {
+  background: #6527BE;
+  background-image: -webkit-linear-gradient(top, #6527BE, #45CFDD);
+  background-image: -moz-linear-gradient(top, #6527BE, #45CFDD);
+  background-image: -ms-linear-gradient(top, #6527BE, #45CFDD);
+  background-image: -o-linear-gradient(top, #6527BE, #45CFDD);
+  background-image: linear-gradient(to bottom, #6527BE, #45CFDD);
+  -webkit-border-radius: 8;
+  -moz-border-radius: 8;
+  border-radius: 8px;
+  font-family: "Bebas Neue", sans-serif;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
 }
