--- a/views/blackjack.ejs
+++ b/views/blackjack.ejs
@@ -4,24 +4,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Im Bored</title>
+  <title>Blackjack</title>
   <link rel="stylesheet" href="/styles/styles.css">
+  <link rel="stylesheet" href="/styles/blackjackstyles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
-<body class = "gradient-background">
+<body>
     <div class = "container">
         <%- include("partials/header.ejs") %>
-        <div>
-            <h1>
-                I'm Bored 
-            </h1>
-            <h2>
-                Are you Bored cuz I am.
-            </h2>
-        </div>
-        <a class = "btn" href = "/random">Random Page</a>
+
     </div>
 </body>
 <footer>
