--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,9 @@
                 Are you Bored cuz I am.
             </h2>
         </div>
-        <a class = "btn" href = "/random">Random Page</a>
+        <div>
+            <a class = "btn" href = "/random">Random Page</a>
+        </div>
     </div>
 </body>
 <footer>
