--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,7 @@
   
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Honk&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
 <body class = "gradient-background">
@@ -19,7 +20,7 @@
             <h1>
                 I'm Bored 
             </h1>
-            <h2>
+            <h2 class = "honk">
                 Are you Bored cuz I am.
             </h2>
         </div>
