--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -24,7 +24,7 @@ h2{
   font-family: 'PT Serif', serif;
   font-weight: 400;
   font-style:normal;
-  font-size: 2rem;
+  font-size: 3rem;
   color:#ffffff;
 }
 
@@ -117,4 +117,14 @@ h2{
   padding: 10px 20px 10px 20px;
   text-decoration: none;
   width:60px;
+}
+
+.honk{
+  font-family: "Honk", system-ui;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings:
+    "MORF" 15,
+    "SHLN" 50;
 }
