--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,6 +27,14 @@
         <div>
             <a class = "btn" href = "/random">Random Page</a>
         </div>
+        <div class = "table">
+            <img src = "/images/bacon.jpg" class = "profile-pic"/>
+            <div>
+                <h3 >Programing</h3>
+                <p>I've been programing for around two years now and have a good understanding of various languages.</p>
+            </div>
+
+        </div>
     </div>
 </body>
 <footer>
