widgets are new

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Honk&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Protest+Riot&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
 <body class = "gradient-background">
@@ -27,14 +28,26 @@
         <div>
             <a class = "btn" href = "/random">Random Page</a>
         </div>
-        <div class = "table">
-            <img src = "/images/bacon.jpg" class = "profile-pic"/>
-            <div>
-                <h3 >Programing</h3>
-                <p>I've been programing for around two years now and have a good understanding of various languages.</p>
-            </div>
+        <a  href = "/bacon"> 
+            <div class = "table">
+                <img src = "/images/bacon.jpg" class = "profile-pic"/>
+                <div>
+                    <h3 >Bacon Image</h3>
+                    <p>Generate a random image of bacon. Put in some parameters if u want idk.</p>
+                </div>
 
-        </div>
+            </div>
+        </a>
+        <a  href = "/imgflip"> 
+            <div class = "table">
+                <img src = "/images/meme.png" class = "profile-pic"/>
+                <div>
+                    <h3 >Meme Generator</h3>
+                    <p>Generate a random meme.</p>
+                </div>
+
+            </div>
+        </a>
     </div>
 </body>
 <footer>
