--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -9,6 +9,9 @@
     background-position: 0% 50%;
   }
 }
+a{
+  text-decoration: none;
+}
 body{
   margin:0px;
  
@@ -19,15 +22,38 @@ h1{
   font-style: normal;
   font-size: 4rem;
   color:#ffffff;
+  text-decoration: none;
 }
 h2{
-  font-family: 'PT Serif', serif;
+  font-family: "Honk", system-ui;
+  font-optical-sizing: auto;
   font-weight: 400;
-  font-style:normal;
+  font-style: normal;
+  font-variation-settings:
+    "MORF" 15,
+    "SHLN" 50;
   font-size: 3rem;
-  color:#ffffff;
+  
 }
-
+h3{
+  font-family: "Honk", system-ui;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings:
+    "MORF" 15,
+    "SHLN" 50;
+  font-size: 2rem;
+  margin-top:0;
+}
+p{
+  font-family: "Protest Riot", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 1.5rem;
+  color:#000000;
+  margin: 0px 1rem;
+}
 .gradient-background {
     background: linear-gradient(300deg, #6527BE, #9681EB, #45CFDD, #A7EDE7);
     background-size: 180% 180%;
@@ -65,13 +91,6 @@ h2{
   font-family: "Bebas Neue", sans-serif;
   font-weight: 400;
   font-style: normal;
-}
-.container{
-  display:flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
-  
 }
 
 .footer{
@@ -128,16 +147,27 @@ h2{
 }
 .table{
   display:grid;
-  grid-template-columns: 0.5fr 1fr;
+  grid-template-columns: 1fr 1.5fr;
   grid-template-rows: repeat(1, 1fr);
-  width: 50%;
-  margin: 100px auto 0 auto;
+  width: 50rem;
+  margin: 50px auto 0 auto;
   text-align: center;
-  row-gap: 2rem;
+  
+  background-color: #ffffff;
+  border-radius: 20px;
+  transition: all 0.3s;
+  box-shadow: 0 0 0 0 rgba(0,0,0,0), 0 0 0 0 rgba(0,0,0,0);
   
 }
+.table:hover{
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.5), 0 6px 20px 0 rgba(0,0,0,0.4);
+  cursor:pointer;
+}
 .profile-pic{
-  height:175px;
+  object-fit: scale-down;
+  max-width: 90%;
+  margin:10%;
+  border-radius: 20px;
 }
 
 .honk{
@@ -148,4 +178,9 @@ h2{
   font-variation-settings:
     "MORF" 15,
     "SHLN" 50;
+}
+.protest-riot-regular {
+  font-family: "Protest Riot", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
