added rest of widgets

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,6 +48,26 @@
 
             </div>
         </a>
+        <a  href = "/blackjack"> 
+            <div class = "table">
+                <img src = "/images/blackjack.jpg" class = "profile-pic"/>
+                <div>
+                    <h3 >Blackjack</h3>
+                    <p>Play blackjack. I love gambling.</p>
+                </div>
+
+            </div>
+        </a>
+        <a  href = "/nasa"> 
+            <div class = "table">
+                <img src = "/images/nasa.png" class = "profile-pic"/>
+                <div>
+                    <h3 >NASA Satalite </h3>
+                    <p>Input your location to find a satalite image of that place.</p>
+                </div>
+
+            </div>
+        </a>
     </div>
 </body>
 <footer>
