--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,44 +28,35 @@
         <div>
             <a class = "btn" href = "/random">Random Page</a>
         </div>
-        <a  href = "/bacon"> 
-            <div class = "table">
-                <img src = "/images/bacon.jpg" class = "profile-pic"/>
-                <div>
-                    <h3 >Bacon Image</h3>
-                    <p>Generate a random image of bacon. Put in some parameters if u want idk.</p>
-                </div>
-
+        <a  href = "/bacon" class = "table"> 
+            <img src = "/images/bacon.jpg" class = "profile-pic"/>
+            <div>
+                <h3 >Bacon Image</h3>
+                <p>Generate a random image of bacon. Put in some parameters if u want idk.</p>
             </div>
         </a>
-        <a  href = "/imgflip"> 
-            <div class = "table">
-                <img src = "/images/meme.png" class = "profile-pic"/>
-                <div>
-                    <h3 >Meme Generator</h3>
-                    <p>Generate a random meme.</p>
-                </div>
-
+        <a  href = "/imgflip" class = "table"> 
+            <img src = "/images/meme.png" class = "profile-pic"/>
+            <div>
+                <h3 >Meme Generator</h3>
+                <p>Generate a random meme.</p>
             </div>
         </a>
-        <a  href = "/blackjack"> 
-            <div class = "table">
-                <img src = "/images/blackjack.jpg" class = "profile-pic"/>
-                <div>
-                    <h3 >Blackjack</h3>
-                    <p>Play blackjack. I love gambling.</p>
-                </div>
-
+        <a href = "/blackjack" class = "table"> 
+            
+            <img src = "/images/blackjack.jpg" class = "profile-pic"/>
+            <div>
+                <h3 >Blackjack</h3>
+                <p>Play blackjack. I love gambling.</p>
             </div>
-        </a>
-        <a  href = "/nasa"> 
-            <div class = "table">
-                <img src = "/images/nasa.png" class = "profile-pic"/>
-                <div>
-                    <h3 >NASA Satalite </h3>
-                    <p>Input your location to find a satalite image of that place.</p>
-                </div>
 
+            
+        </a>
+        <a  href = "/nasa" class = "table"> 
+            <img src = "/images/nasa.png" class = "profile-pic"/>
+            <div>
+                <h3 >NASA Satalite </h3>
+                <p>Input your location to find a satalite image of that place.</p>
             </div>
         </a>
     </div>
