--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -150,7 +150,7 @@ p{
   grid-template-columns: 1fr 1.5fr;
   grid-template-rows: repeat(1, 1fr);
   width: 50rem;
-  margin: 50px auto 0 auto;
+  margin: 50px 23rem 0 23rem;
   text-align: center;
   
   background-color: #ffffff;
