--- a/views/bacon.ejs
+++ b/views/bacon.ejs
@@ -31,7 +31,7 @@
           <form class = "task" action="/baconImg" method="POST">
             <input type = "text" name="width" value = "" placeholder="Width">
             <input type = "text" name="height" value = "" placeholder="Height">
-            <input type="submit" value="+">
+            <input type="submit" value="Submit">
           
           </form>
         </div>
