--- a/public/styles/baconstyles.css
+++ b/public/styles/baconstyles.css
@@ -61,3 +61,7 @@ input[type="submit"]:hover{
 .form-container{
   margin: 50px auto;
 }
+.dimensions-form{
+  background-color: #ffffff;
+  border-radius: 15px;
+}
