--- a/views/bacon.ejs
+++ b/views/bacon.ejs
@@ -46,7 +46,7 @@
         </div>
         <div>
         <% if(locals.imgUrl){%>
-          <a class = "btn" href = <%= imgUrl %>>Download</a>
+          <a class = "btn" href = <%= imgUrl %> download>Download</a>
         <% } %>
         </div>
     </div>
