--- a/views/blackjack.ejs
+++ b/views/blackjack.ejs
@@ -13,9 +13,20 @@
   <link href="https://fonts.googleapis.com/css2?family=Protest+Riot&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class = "blackjack-gradient-background">
     <div class = "container">
         <%- include("partials/header.ejs") %>
+        <div>
+          <h1>
+            Blackjack
+          </h1>
+          <h2>
+            Play some blackjack below.
+          </h2>
+        </div>
+        <div>
+          <img src="https://deckofcardsapi.com/static/img/back.png" />
+        </div>
 
     </div>
 </body>
