--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,6 +28,7 @@
         <div>
             <a class = "btn" href = "/random">Random Page</a>
         </div>
+        <div>
         <a  href = "/bacon" class = "table"> 
             <img src = "/images/bacon.jpg" class = "profile-pic"/>
             <div>
@@ -59,6 +60,7 @@
                 <p>Input your location to find a satalite image of that place.</p>
             </div>
         </a>
+    </div>
     </div>
 </body>
 <footer>
