--- a/views/blackjack.ejs
+++ b/views/blackjack.ejs
@@ -24,9 +24,19 @@
             Play some blackjack below.
           </h2>
         </div>
-        <div>
+        <div class = "blackjack-container">
           <%  %>
-          <img src="https://deckofcardsapi.com/static/img/back.png" />
+          <h3>Dealer</h3>
+          <div class = "cards">
+            <img src="https://deckofcardsapi.com/static/img/back.png" class = "card"/>
+            <img src="https://deckofcardsapi.com/static/img/back.png" class = "card"/>
+          </div>
+          <h3>Player</h3>
+          <div class = "cards">
+            <img src="https://deckofcardsapi.com/static/img/back.png" class = "card"/>
+            <img src="https://deckofcardsapi.com/static/img/back.png" class = "card"/>
+          </div>
+
         </div>
 
     </div>
