--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -13,9 +13,9 @@ a{
   text-decoration: none;
 }
 body{
-  margin:0px;
+  margin:0px 8px 0px 0px;
  
-}
+} 
 h1{
   font-family: "Bebas Neue", sans-serif;
   font-weight: 400;
