--- a/views/blackjack.ejs
+++ b/views/blackjack.ejs
@@ -41,7 +41,7 @@
             <%}else if(hand.handState==1){%>
               <% if(!hand.cards.length == 0){ %>
                 <img src = "<%= hand.cards[0].image %>" class = "card"/>
-                <img src = "<%= dealer.cards[1].image %>" class = "card"/>
+                <img src = "<%= hand.cards[1].image %>" class = "card"/>
               <% } %>
             <% } %>
             <% }) %>
@@ -81,27 +81,30 @@
             <!-- <img src="https://deckofcardsapi.com/static/img/back.png" class = "card"/>
             <img src="https://deckofcardsapi.com/static/img/back.png" class = "card"/> -->
           <%}) %>
-          <% if(gameState == 1){ %>
+          <% if(gameState==0){ %>
+            <form class = "dimensions-container" action="/blackjack/play/shuffle" method="POST">
+            
+              <input type = "text" name = "hands" value = "" placeholder="Hand Count">
+              <input type="submit" value="Submit">
+            </form>
+          <%}else if(gameState == 1){ %>
             <form class = "dimensions-container" action="/blackjack/play/deal" method="POST">
               <% player.forEach((hand)=>{ %>
               <input type = "text" name="<%= hand.betId %>" value = "" placeholder="Bet">
               <% }) %>
               <input type="submit" value="Submit">
             </form>
-          <% } %>
-          </div>
-          <!-- add statement for betting which returns propper names using hand ids-->
-          <form class = "dimensions-container" action="/blackjack/play/shuffle" method="POST">
+          <% }else if(gameState == 2){ %>
             
-            <input type = "text" name = "hands" value = "" placeholder="Hand Count">
-            <input type="submit" value="Submit">
-          </form>
+          <% }else if(gameState == 3){ %>
+            <a class = "btn" href = "/blackjack/play/dealer">Play Dealer</a>
+          <% }else if(gameState ==4){ %>
+            <a class = "btn" href = "/blackjack/play/reset">Deal New Hand</a>
+          <% } %>
           
-          <form class = "dimensions-container" action="/blackjack/play/deal" method="POST">
-            <input type = "text" name="bet" value = "" placeholder="Bet">
-            <input type="submit" value="Submit">
-          
-          </form>
+          </div>
+         
+        
           
           
           <% } %>
