need to add blackjack function for player

--- a/public/styles/blackjackstyles.css
+++ b/public/styles/blackjackstyles.css
@@ -32,6 +32,7 @@
     display:flex;
     justify-content: center;
     flex-direction: column;
+    padding: 20px;
 
 }
 .cards{
@@ -40,7 +41,7 @@
 }
 .buttons{
     display:flex;
-    justify-content: cetner;
+    justify-content: center;
 }
 
 .button
