--- a/views/blackjack.ejs
+++ b/views/blackjack.ejs
@@ -72,6 +72,7 @@
               <%}) %>
               </div>
               <h2><%= hand.totalValuesString %></h2>
+              <% console.log(hand.totalValuesString) %>
               <div class = "buttons">
               <% if(activeHand==hand.id){ %>
                 <!-- We need active hand so we can keep track of place in javascript file -->
