--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,6 +60,13 @@
                 <p>Input your location to find a satalite image of that place.</p>
             </div>
         </a>
+        <a  href = "/calculator" class = "table"> 
+            <img src = "/images/calc.png" class = "profile-pic"/>
+            <div>
+                <h3>Calculator</h3>
+                <p>Input two values and add them together</p>
+            </div>
+        </a>
     </div>
     </div>
 </body>
