--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,4 +1,4 @@
-@keyframes gradient-animation {
+/* @keyframes gradient-animation {
   0% {
     background-position: 0% 50%;
   }
@@ -8,7 +8,7 @@
   100% {
     background-position: 0% 50%;
   }
-}
+} */
 a{
   text-decoration: none;
 }
