--- a/views/nasa.ejs
+++ b/views/nasa.ejs
@@ -20,6 +20,7 @@
         <form class = "dimensions-container" action="/nasa" method="POST">
           <input type = "text" name = "lat" value = "" placeholder="Lattitude">
           <input type = "text" name = "lon" value = "" placeholder = "Longitude">
+          <input type = "text" name = "date" value = "" placeholder="YYYY-MM-DD">
           
           <input type="submit" value="Get Image">
         </form>
