--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,6 +17,7 @@
 <body class = "gradient-background">
     <div class = "container">
     <%- include("partials/header.ejs") %>
+    <!-- Titles -->
         <div>
             <h1>
                 I'm Bored 
@@ -25,10 +26,12 @@
                 Are you Bored cuz I am.
             </h2>
         </div>
+        <!-- Random button -->
         <div>
             <a class = "btn" href = "/random">Random Page</a>
         </div>
         <div>
+        <!-- Widget-->
         <a  href = "/bacon" class = "table"> 
             <img src = "/images/bacon.jpg" class = "profile-pic"/>
             <div>
@@ -36,6 +39,8 @@
                 <p>Generate a random image of bacon. Put in some parameters if u want idk.</p>
             </div>
         </a>
+                <!-- Widget-->
+
         <a  href = "/imgflip" class = "table"> 
             <img src = "/images/meme.png" class = "profile-pic"/>
             <div>
@@ -43,6 +48,8 @@
                 <p>Generate a random meme.</p>
             </div>
         </a>
+                <!-- Widget-->
+
         <a href = "/blackjack" class = "table"> 
             
             <img src = "/images/blackjack.jpg" class = "profile-pic"/>
@@ -53,6 +60,8 @@
 
             
         </a>
+                <!-- Widget-->
+
         <a  href = "/nasa" class = "table"> 
             <img src = "/images/nasa.png" class = "profile-pic"/>
             <div>
@@ -60,6 +69,8 @@
                 <p>Input your location to find a satalite image of that place.</p>
             </div>
         </a>
+                <!-- Widget-->
+
         <a  href = "/calculator" class = "table"> 
             <img src = "/images/calc.png" class = "profile-pic"/>
             <div>
