--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
                 I'm Bored 
             </h1>
             <h2 class = "honk">
-                Are you Bored cuz I am.
+                Are you Bored? I am.
             </h2>
         </div>
         <!-- Random button -->
@@ -38,7 +38,7 @@
                 <img src = "/images/blackjack.jpg" class = "profile-pic"/>
                 <div>
                     <h3 >Blackjack</h3>
-                    <p>Play blackjack. I love gambling.</p>
+                    <p>Play up to three hands of blackjack. (You can reset the money if you lose it all)</p>
                 </div>
         
                     
