--- a/views/about.ejs
+++ b/views/about.ejs
@@ -12,11 +12,22 @@
   <link href="https://fonts.googleapis.com/css2?family=Protest+Riot&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class = "gradient-background">
     <div class = "container">
         <%- include("partials/header.ejs") %>
+        <!-- Titles -->
+        <div>
+          <h1>
+              About 
+          </h1>
+          <h2 class = "honk">
+              This site is just a class project that I did for my senior year final. I got a little overambitious so please disregaurd
+              the unrefined web styling. Most of mine went into the blackjack page logic. 
+          </h2>
+        </div>
 
     </div>
+
 </body>
 <footer>
   <%- include("partials/footer.ejs") %>
